--- a/Client/src/css/navbar.css
+++ b/Client/src/css/navbar.css
@@ -10,7 +10,8 @@ body {
     width: 20%;
     padding: 10px;
     margin: 0;
-    float: left
+    float: left;
+    border-width: 3px;
 }
 
 #products {
@@ -55,6 +56,7 @@ li a:hover {
     width: 250px;
     display: inline-block;
     height: 300px
+    
 }
 
 .card-img-top {
